--- a/RestaurantManagement/Web.config
+++ b/RestaurantManagement/Web.config
@@ -7,9 +7,13 @@
 
 <configuration>
 
-    <system.web>
-      <compilation debug="true" targetFramework="4.5.2" />
-      <httpRuntime targetFramework="4.5.2" />
-    </system.web>
+  <connectionStrings>
+    <add name="luigis" connectionString="Server=(localdb)\MSSQLlocalDB;Initial Catalog=luigis;Integrated Security=SSPI"/>
+  </connectionStrings>
+
+  <system.web>
+    <compilation debug="true" targetFramework="4.5.2" />
+    <httpRuntime targetFramework="4.5.2" />
+  </system.web>
 
 </configuration>
