Changed quantity selection to a TextBox with RangeValidator, also modified web.config to support validators

--- a/RestaurantManagement/Web.config
+++ b/RestaurantManagement/Web.config
@@ -6,7 +6,9 @@
   -->
 
 <configuration>
-
+  <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  </appSettings>
   <connectionStrings>
     <add name="luigis" connectionString="Server=(localdb)\MSSQLlocalDB;Initial Catalog=luigis;Integrated Security=SSPI"/>
   </connectionStrings>
